<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginBottom="12dp"
    android:layout_marginTop="6dp"
    android:id="@+id/ic_preview"
    app:cardCornerRadius="8dp"
>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#321717"
        android:orientation="vertical"
        android:padding="12dp"
    >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        >

            <TextView
                android:id="@+id/ic_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                tools:ignore="RelativeOverlap"
                android:text="@string/country"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="18sp"
            />

            <TextView
                android:id="@+id/ic_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                tools:ignore="RelativeOverlap"
                android:text="@string/code"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="18sp"
            />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
        >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/confirmed"
                android:textColor="#FFFFFF"
            />

            <TextView
                android:id="@+id/ic_confirmed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                tools:ignore="RelativeOverlap"
                android:text="@string/quantity"
                android:textColor="#FFFFFF"
            />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
        >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/deaths"
                android:textColor="#FFFFFF"
            />

            <TextView
                android:id="@+id/ic_deaths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                tools:ignore="RelativeOverlap"
                android:text="@string/quantity"
                android:textColor="#FFFFFF"
            />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
        >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/recovered"
                android:textColor="#FFFFFF"
            />

            <TextView
                android:id="@+id/ic_recovered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                tools:ignore="RelativeOverlap"
                android:text="@string/quantity"
                android:textColor="#FFFFFF"
            />

        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>